# shaoooh

./: .gitmodules  LICENSE  README.md
control/: README.md  display.py  display2.py  main.py
docs/: README.md
logic/: .gitignore  Cargo.toml  README.md  build.rs  index.html  run.sh  user_config.json.example
logic/src/: lib.rs  main.rs
logic/src/app/: error.rs  main.rs  mod.rs  states.rs
logic/src/context/: encounters.rs  mod.rs  species.rs  versions.rs
logic/src/control/: bishaan_control.rs  mod.rs  nop_control.rs  serial_control.rs
logic/src/displays/: display.rs  gfx.rs  lights.rs  mod.rs  webhook.rs
logic/src/fsm/: draw.rs  mod.rs
logic/src/hunt/: bw2_softreset.rs  detection.rs  dp_random.rs  encounter_type.rs  frlg_random.rs  frlg_safari.rs  frlg_starter.rs  hgss_random.rs  hgss_safari.rs  mod.rs  rs_safari.rs  rs_softreset.rs  state_machine.rs  state_machine_build.rs
logic/src/lights/: mod.rs
logic/src/vision/: bishaan_vision.rs  compat.rs  ds_vision.rs  found.rs  mod.rs  nop_vision.rs  ntr.rs  utils.rs
logic/ws2812/: neopixel.c  neopixel.h
reference/images/: .gitignore  populate.py
testing/: README.md  shiny_star.py  video_read.py  video_state.py
