[package]
name = "Shaoooh"
version = "0.1.0"
edition = "2024"

[build]
jobs = 2

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tower-http = {version = "0.6.2", features = ["fs"]}
tokio = { version = "1", features = ["rt-multi-thread", "signal", "sync"] }
simple_logger = "5.0.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.7.2"
opencv = "0.94.4"
reqwest = { version = "0.12.20", features = ["json"] }