[package]
name = "shaoooh"
version = "0.1.0"
edition = "2024"
default-run = "shaoooh"

[build]
jobs = 2

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tower-http = {version = "0.6.2", features = ["fs"]}
tokio = { version = "1", features = ["rt-multi-thread", "signal", "sync"] }
simple_logger = "5.0.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.7.2"
opencv = {version = "0.94.4", features = ["clang-runtime"] }
reqwest = { version = "0.12.20", features = ["multipart", "stream"] }
rand = "0.9.1"
strum_macros = "0.27.2"
chrono = {version = "0.4.41", features = ["serde"] }
csv = "1.3.1"

[build-dependencies]
bindgen = "0.71.0"
