[package]
name = "shaoooh"
version = "0.1.0"
edition = "2024"

[build]
jobs = 2

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tower-http = {version = "0.6.2", features = ["fs"]}
tokio = { version = "1", features = ["rt-multi-thread", "signal", "sync"] }
tokio-util = "0.7.17"
simple_logger = "5.0.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.7.2"
opencv = {version = "0.94.4", features = ["clang-runtime"] }
reqwest = { version = "0.12.20", features = ["multipart", "stream"] }
rand = "0.9.1"
strum = "0.27"
strum_macros = "0.27"
chrono = {version = "0.4.41", features = ["serde"] }
csv = "1.3.1"
clap = { version = "4.5.46", features = ["derive"] }
async-zeroconf = "0.2.2"

# Get version of opencv at compile time
[build-dependencies]
opencv = {version = "0.94.4", features = ["clang-runtime"] }

[target.'cfg(all(target_arch = "aarch64", target_os = "linux"))'.build-dependencies]
bindgen = "0.71.0"

[patch.crates-io]
bonjour-sys = { git = "https://github.com/martiansoup/bonjour-sys" }